Make command prefix configurable